selfhost/test/parser/invocation_error_eof.out
Error at %FILE_NAME%:1:6
Unexpected end of file:
  |  a.b(1
          ^